--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+    border: 1px solid red;
     background-color: white;
 }
 
